// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render bookings summary with multiple bookings 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    bookings
     totalling 
    $1,100.88
     
  </h1>
</div>
`;

exports[`Should correctly render bookings summary with one booking 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    booking
     totalling 
    $85.88
     
  </h1>
</div>
`;
